# homodyne

./: .flake8  .gitignore  .graphifyignore  .pre-commit-config.yaml  .readthedocs.yaml  ALPHA_RELEASE_CHECKLIST.md  ARCHITECTURAL_COMPARISON_REPORT.md  CHANGELOG.md  CLAUDE.md  CMC_IMPLEMENTATION_SUMMARY.md  CMC_VALIDATION_REPORT.md  DEBUG_REPORT.md  FIX_SINGLE_ANGLE_INITIALIZATION.md  GPU Acceleration Setup.txt  HYBRID_ARCHITECTURE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MCMC_PARAMETER_FLOW.md  MERGE_CHECKLIST.md  Makefile  NLSQ_ARCHITECTURE_REVIEW.md  NUTS_FIXES_SUMMARY.md  PER_ANGLE_INITIALIZATION.md  README.md  RELEASE_NOTES_v2.0.0-alpha.1.md  SCALING_OVERRIDES_EXPLANATION.md  SIMULATED_DATA_FIX_SUMMARY.md  TASK_GROUPS_14_17_COMPLETION_SUMMARY.md  TASK_GROUP_10_SUMMARY.md  TASK_GROUP_11_SUMMARY.md  TASK_GROUP_12_SUMMARY.md  TASK_GROUP_13_BRIEF.md  TASK_GROUP_13_SUMMARY.md  TASK_GROUP_18_SUMMARY.md  TASK_GROUP_1_COMPLETION_SUMMARY.md  TASK_GROUP_4_SUMMARY.md  TASK_GROUP_5_2_COMPLETION_SUMMARY.md  TASK_GROUP_6_SUMMARY.md  TASK_GROUP_8_COMPLETION_SUMMARY.md  TASK_GROUP_8_SUMMARY.md  TASK_GROUP_9_COMPLETION.md  (+29 more)
.github/: DOCUMENTATION_LIFECYCLE.md  activate-optimized-workflows.sh
.github/workflows/: README.md  ci.yml  docs.yml  quality.yml  release.yml
.github/workflows-disabled/: OPTIMIZATION_SUMMARY.md  README.md  ci-optimized.yml  ci.yml  claude-optimized.yml  docs-optimized.yml  docs.yml  quality-optimized.yml  quality.yml  release-optimized.yml  release.yml
docs/: .gitignore  ADAPTIVE_NOISE_MODEL_DETAILS.md  ARCHITECTURAL_ANALYSIS_SUMMARY.md  ARCHITECTURE_FLOW_CHART_V2.md  CONSOLIDATION_COMPLETE_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  HOMODYNE_V2_UPDATED_ARCHITECTURE_FLOWCHART.md  MIGRATION_OPTIMISTIX_TO_NLSQ.md  Makefile  PER_ANGLE_NOISE_MODEL_DETAILS.md  PHASE_3_QUALITY_CONTROL.md  README.md  TEST_DELETION_PLAN.md  TEST_SUITE_CLEANUP_ANALYSIS.md  WEEK1_FINAL_SUMMARY.md  WEEK1_PROGRESS.md  WEEK2_CONSOLIDATION_PLAN.md  WEEK2_PHASE1_SUMMARY.md  WEEK2_PROGRESS.md  WEEK5_CONSOLIDATION_SUMMARY.md  WEEK5_PARAMETER_CONSOLIDATION_PLAN.md  WEEK6_CONFIG_INFRASTRUCTURE_PLAN.md  WEEK6_CONSOLIDATION_SUMMARY.md  WEEK7_CLI_BACKEND_PLAN.md  WEEK7_CONSOLIDATION_SUMMARY.md  WEEK8_QUALITY_IMPROVEMENTS.md  architecture.rst  conf.py  enhanced_logging_guide.md  index.rst  make.bat  numerical-stability-mitigation-plan.md  per_angle_scaling_guide.md  requirements-docs.txt  requirements.txt
docs/_static/: custom.css
docs/advanced-topics/: angle-filtering.rst  cmc-large-datasets.rst  gpu-acceleration.rst  index.rst  mcmc-uncertainty.rst  nlsq-optimization.rst  streaming-optimization.rst
docs/analysis/: nlsq-divergence-root-cause-20260102.md
docs/api/: cmc_api.md  optimization.md
docs/api-reference/: cli.rst  cmc_api.md  config.rst  core.rst  data.rst  device.rst  index.rst  optimization.md  optimization.rst  utils.rst  viz.rst
docs/architecture/: README.md  cmc-decision-quick-reference.md  cmc-dual-mode-strategy.md  cmc-fitting-architecture.md  data-handler-architecture.md  homodyne-architecture-overview.md  memory-fix-plan.md  nlsq-fitting-architecture.md  nlsq-least-squares-solution.md  nuts-chain-parallelization-quick-reference.md  nuts-chain-parallelization.md  physical-model-architecture.md  ultra-think-nlsq-solution-20251106.md
docs/configuration/: index.rst  options.rst  templates.rst
docs/configuration-templates/: index.rst  laminar-flow.rst  master-template.rst  static-isotropic.rst
docs/developer-guide/: architecture.rst  cmc_architecture.md  cmc_rng_and_initialization.md  code-quality.rst  contributing.rst  index.rst  performance.rst  testing.rst
docs/developer_guide/: cmc_architecture.md
docs/development/: ADVANCED_VALIDATION_ENHANCEMENTS.md  DATA_FILTERING_IMPLEMENTATION.md  ENHANCED_MODELS_SUMMARY.md  NUMPY_GRADIENTS_README.md
docs/examples/: gpu_acceleration.py  laminar_flow_nlsq.py  mcmc_uncertainty.py  setup_shell_completion.sh  static_isotropic_nlsq.py  streaming_100m_points.py
docs/features/: ENHANCED_LOGGING_README.md  OPTIMIZATION_FALLBACK_GUIDE.md  PREPROCESSING_PIPELINE_README.md  UX_ENHANCEMENTS_README.md
docs/guides/: performance_tuning.md  readthedocs-setup.md  readthedocs-troubleshooting.md  streaming_optimizer_usage.md
docs/migration/: v2.0-to-v2.1.md  v2.2-to-v2.3-gpu-removal.md  v2_to_v3_migration.md  v3_cmc_migration.md  v3_cmc_only.md
docs/notebooks/: 01_quickstart.ipynb  02_static_analysis.ipynb  03_laminar_flow.ipynb  04_bayesian_inference.ipynb
docs/performance/: anti-degeneracy-v2.9.0-optimization-plan.md  anti-degeneracy-v2.9.0-summary.md  (+4 more)
examples/: README.md  advanced_validation_demo.py  benchmark_onednn.py  cmc_large_dataset.py  cpu_optimization.py  demo_mcmc_selection_logging.py  enhanced_logging_examples.py  fallback_system_demo.py  gpu_accelerated_optimization.py  gpu_acceleration.py  mcmc_integration_demo.py  mcmc_uncertainty.py  multi_core_batch_processing.py  nlsq_optimization_example.ipynb  quality_control_demo.py  test_mcmc_integration_demo.py
graphify-out/: .docs_find_output.txt  .graphify_chunk_list_aa  .graphify_chunk_list_ab  .graphify_chunk_list_ac  .graphify_chunk_list_ad  .graphify_chunk_list_ae  .graphify_chunk_list_af  .graphify_chunk_list_ag  .graphify_chunk_list_ah  .graphify_chunk_list_ai  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  extract_chunk06.py  extract_chunk06_v2.py  graph.html  manifest.json
homodyne/: __init__.py  __main__.py  _version.py  post_install.py  uninstall_scripts.py
scripts/: README.md  bash_completion.sh  benchmark_jacobian_ad.py  benchmark_perf_optimizations.py  compare_nlsq_cmc_c2.py  debug_cmc_vs_nlsq_physics.py  dev_install.sh  diagnose_gradients.py  direct_backend_test.py  install_completion.sh  laminar_logprob_probe.py  migrate_config_v3.py  nlsq_least_squares_test.py  nlsq_regression_harness.py  run_enhanced_data_loading_tests.py  run_fallback_tests.py  simple_fallback_test.py  validate_numpy_gradients.py
test_results/: FILES_CREATED.md  TESTING_TIERS_REPORT.md
tests/: README.md  __init__.py  conftest.py  test_runner.py  verify_cmc_fix.py
(+706 files in other folders)
