[build-system]
requires = ["setuptools>=80.0.0", "wheel>=0.45.0", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homodyne"
dynamic = ["version"]
description = "CPU-optimized JAX-based homodyne scattering analysis for XPCS under nonequilibrium conditions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
    {name = "Hongrui He", email = "hhe@anl.gov"},
]
maintainers = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
]
keywords = [
    "xpcs",
    "scattering",
    "dynamics",
    "jax",
    "optimization",
    "bayesian",
    "physics",
    "materials-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"  # Tested with Python 3.12.x and 3.13.x

# ============================================================================
# CPU-ONLY ARCHITECTURE (v2.3.0+)
# ============================================================================
# Homodyne.3.0+ is CPU-only, optimized for multi-core systems and HPC clusters.
# Works on ALL platforms: Linux, macOS, Windows
#
# GPU support removed in v2.3.0 for simplified maintenance and reliability.
# For GPU users: Use Homodyne.2.1 (last GPU-supporting version)
#
# Platform support:
#   ✅ Linux: Full support (HPC clusters with 36/128-core nodes)
#   ✅ macOS: Full support (Apple Silicon/Intel)
#   ✅ Windows: Full support
#
# Requirements:
#   - Python 3.12+
#   - JAX 0.8.0 (CPU-only, exact version)
#   - Multi-core CPU recommended (14+ cores for best performance)
#
# See README.md for HPC CPU optimization guide
# See docs/migration/v2.2-to-v2.3-gpu-removal.md for migration from v2.2.x
# ============================================================================
dependencies = [
    # Core scientific computing (2025 tested stable)
    "numpy>=2.3.5,<3.0.0",  # Tested: NumPy 2.3.5 (uv env)
    "scipy>=1.16.3,<2.0.0",  # Tested: SciPy 1.16.3 (uv env)

    # JAX ecosystem (CPU-only in v2.3.0+)
    "jax==0.8.0",  # JAX 0.8.0 CPU-only - exact version required
    "jaxlib==0.8.0",  # jaxlib 0.8.0 CPU-only - must match JAX version exactly
    "nlsq>=0.3.0,<0.4.0",  # NLSQ trust-region optimizer for JAX-native nonlinear least squares
                          # Repository: https://github.com/imewei/NLSQ
                          # Provides Trust Region Reflective (TRF) and Levenberg-Marquardt (LM) algorithms
                          # Tested: nlsq 0.3.0 (uv env)

    # Bayesian inference (2025 stable)
    "numpyro>=0.19.0,<0.20.0",  # Tested: NumPyro 0.19.0 (uv env)
    "blackjax>=1.3.0,<2.0.0",  # Tested: BlackJAX 1.3.0 (uv env)
    "arviz>=0.22.0,<0.23.0",  # CMC diagnostics, 95% CI plots, trace plots (uv env 0.22.0)
    "arviz-base>=0.7.0,<0.8.0",  # ArviZ split packages (uv env 0.7.0)
    "arviz-plots>=0.7.0,<0.8.0",  # ArviZ split packages (uv env 0.7.0)
    "arviz-stats>=0.7.0,<0.8.0",  # ArviZ split packages (uv env 0.7.0)

    # Data handling
    "h5py>=3.15.0,<4.0.0",  # Tested: h5py 3.15.1 (uv env)
    "pyyaml>=6.0.2",  # Tested: PyYAML 6.0.3

    # System utilities
    "psutil>=7.1.0,<8.0.0",  # Tested: psutil 7.1.3 (uv env)
    "cloudpickle>=3.1.0,<4.0.0",  # Multiprocessing serialization for complex objects (CMC backend)

    # Plotting (stable)
    "matplotlib>=3.10.7,<4.0.0",  # Tested: matplotlib 3.10.7 (uv env)

    # Fast visualization (optional - graceful degradation if unavailable)
    "datashader>=0.18.2,<0.19.0",  # Fast heatmap rasterization (5-10x speedup) (uv env 0.18.2)
    "xarray>=2025.12.0,<2026.0.0",  # Required by Datashader for coordinate-aware data (uv env 2025.12.0)
]

[project.optional-dependencies]
# Development and testing (all platforms)
dev = [
    "pytest>=8.4.0,<9.0.0",  # Tested: pytest 8.4.2
    "pytest-cov>=7.0.0,<8.0.0",  # Tested: pytest-cov 7.0.0
    "pytest-xdist>=3.8.0,<4.0.0",  # Tested: pytest-xdist 3.8.0, parallel execution with -n auto
    "black>=25.11.0,<26.0.0",  # Tested: black 25.11.0 (uv env)
    "ruff>=0.14.8,<0.15.0",  # Tested: ruff 0.14.8 (uv env)
    "mypy>=1.19.0,<2.0.0",  # Tested: mypy 1.19.0 (uv env)
    "pre-commit>=4.5.0,<5.0.0",  # Tested: pre-commit 4.5.0 (uv env)
    "tqdm>=4.67.1",  # Tested: tqdm 4.67.1 (uv env)
]

# Documentation (all platforms)
docs = [
    "sphinx>=8.0.0,<9.0.0",  # Tested: sphinx 8.2.3
    "sphinx-rtd-theme>=3.0.0,<4.0.0",  # Tested: sphinx-rtd-theme 3.0.2
    "myst-parser>=4.0.0,<5.0.0",  # Tested: myst-parser 4.0.1
]

# Complete installation (all platforms, CPU-only)
# Note: GPU users should install JAX with CUDA support separately (see README.md)
all = [
    "homodyne[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/your-org/homodyne"
Documentation = "https://homodyne.readthedocs.io"
Repository = "https://github.com/your-org/homodyne.git"
Issues = "https://github.com/your-org/homodyne/issues"

[project.scripts]
homodyne = "homodyne.cli.main:main"
homodyne-config = "homodyne.cli.config_generator:main"
homodyne-config-xla = "homodyne.cli.xla_config:main"
homodyne-post-install = "homodyne.post_install:main"
homodyne-cleanup = "homodyne.uninstall_scripts:main"

[tool.setuptools_scm]
write_to = "homodyne/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
where = ["."]
include = ["homodyne*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
homodyne = [
    "config/templates/*.yaml",
    "config/templates/*.yml",
]

[tool.black]
line-length = 88
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"  # Compatible with py313

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.12"  # Compatible with 3.13
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "nlsq.*",
    "numpyro.*",
    "blackjax.*",
    "arviz.*",
    "h5py.*",
    "psutil.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# Phased mypy cleanup: relax non-library targets so tests/docs/scripts can run
# without blocking strict library work. These modules still run through mypy,
# but imports are skipped and errors are suppressed to keep the signal focused
# on the homodyne package while we incrementally type-annotate these areas.
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "docs.*"]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (Linux + CUDA 12+ only)",
    "integration: marks tests as integration tests",
    "linux: marks tests as requiring Linux OS",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "mcmc: marks tests as MCMC statistical tests",
    "property: marks tests as property-based tests",
    "requires_jax: marks tests as requiring JAX",
    "requires_gpu: marks tests as requiring GPU hardware (Linux + CUDA 12+)",
    "api: marks tests as API compatibility tests",
    "self_consistency: marks tests as CMC self-consistency tests",
    "validation: marks tests as CMC accuracy validation tests",
]
filterwarnings = [
    # Expected warnings in test environment
    "ignore:There are not enough devices to run parallel chains:UserWarning",
    "ignore:JAXopt is no longer maintained:DeprecationWarning",
    "ignore:Covariance of the parameters could not be estimated:scipy.optimize.OptimizeWarning",
    # Third-party library warnings (cannot fix)
    "ignore:invalid escape sequence:SyntaxWarning",
]

[tool.coverage.run]
source = ["homodyne"]
omit = [
    # Package metadata
    "homodyne/_version.py",
    "homodyne/post_install.py",
    "homodyne/uninstall_scripts.py",
    # CLI/UI components (integration tested separately)
    "homodyne/cli/*",
    "homodyne/viz/*",
    "homodyne/runtime/*",
    # Data loading (integration tested with HDF5 files)
    "homodyne/data/*",
    "homodyne/device/*",
    "homodyne/io/*",
    # Core physics (validated via scientific tests, not unit tests)
    "homodyne/core/fitting.py",
    "homodyne/core/models.py",
    "homodyne/core/numpy_gradients.py",
    "homodyne/core/jax_backend.py",
    "homodyne/core/physics.py",
    "homodyne/core/physics_cmc.py",
    "homodyne/core/physics_factors.py",
    "homodyne/core/physics_nlsq.py",
    "homodyne/core/theory.py",
    # Legacy optimization modules (replaced in v2.4.1)
    "homodyne/optimization/mcmc.py",
    "homodyne/optimization/nlsq_wrapper.py",
    "homodyne/optimization/nlsq.py",
    "homodyne/optimization/cmc/*",
    "homodyne/optimization/gradient_diagnostics.py",
    "homodyne/optimization/stratified_residual_jit.py",
    "homodyne/optimization/batch_statistics.py",
    "homodyne/optimization/sequential_angle.py",
    "homodyne/optimization/numerical_validation.py",
    "homodyne/optimization/strategy.py",
    # v2.4.1 reorganized modules - infrastructure code
    "homodyne/optimization/initialization/*",
    "homodyne/optimization/nlsq/wrapper.py",
    "homodyne/optimization/nlsq/jacobian.py",
    "homodyne/optimization/nlsq/transforms.py",
    "homodyne/optimization/nlsq/strategies/residual_jit.py",
    # MCMC infrastructure (integration tested via CMC tests)
    "homodyne/optimization/mcmc/cmc/*",
    "homodyne/optimization/mcmc/data_prep.py",
    "homodyne/optimization/mcmc/priors.py",
    "homodyne/optimization/mcmc/scaling.py",
    "homodyne/optimization/mcmc/single_angle.py",
    # Utilities
    "homodyne/utils/progress.py",
    "homodyne/utils/validation.py",
    # Test directories
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Environment-specific configurations
[tool.homodyne]
# HPC environment configuration
hpc = true
cuda_system_path = "/usr/local/cuda-12"  # CUDA 12.1-12.9 required
preferred_device = "auto"  # auto, cpu, gpu
cuda_version = "12.x"  # Minimum 12.1, maximum 12.9

# Default analysis parameters
[tool.homodyne.defaults]
analysis_mode = "static_isotropic"
optimization_method = "nlsq"
output_format = "yaml"

[tool.homodyne.performance]
# Performance optimization hints
cpu_threads = "auto"
gpu_memory_fraction = 0.9
enable_jit = true
cache_compilation = true
