[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.42.0", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homodyne"
dynamic = ["version"]
description = "CPU-optimized JAX-based homodyne scattering analysis for XPCS under nonequilibrium conditions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
    {name = "Hongrui He", email = "hhe@anl.gov"},
]
maintainers = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
]
keywords = [
    "xpcs",
    "scattering",
    "dynamics",
    "jax",
    "optimization",
    "bayesian",
    "physics",
    "materials-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"

# ============================================================================
# CPU-ONLY ARCHITECTURE (v2.3.0+)
# ============================================================================
# Homodyne is CPU-only, optimized for multi-core systems and HPC clusters.
# Works on ALL platforms: Linux, macOS, Windows
#
# Platform support:
#   ✅ Linux: Full support (HPC clusters with 36/128-core nodes)
#   ✅ macOS: Full support (Apple Silicon/Intel)
#   ✅ Windows: Full support
#
# Requirements:
#   - Python 3.12+ (tested with 3.12.x and 3.13.x)
#   - JAX 0.8.0 (CPU-only, exact version)
#   - Multi-core CPU recommended (14+ cores for best performance)
# ============================================================================
dependencies = [
    # Core scientific computing
    "numpy>=2.0.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",

    # JAX ecosystem (CPU-only in v2.3.0+)
    "jax==0.8.0",
    "jaxlib==0.8.0",
    "nlsq>=0.3.0",

    # Bayesian inference
    "numpyro>=0.19.0,<0.20.0",
    "blackjax>=1.2.0,<2.0.0",

    # Data handling
    "h5py>=3.10.0,<4.0.0",
    "pyyaml>=6.0.2",

    # System utilities
    "psutil>=6.0.0,<8.0.0",
    "cloudpickle>=3.0.0,<4.0.0",

    # Plotting
    "matplotlib>=3.8.0,<4.0.0",

    # Fast visualization (optional - graceful degradation if unavailable)
    "datashader>=0.16.0,<0.19.0",
    "xarray>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "ruff>=0.13.0,<0.15.0",
    "mypy>=1.18.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "tqdm>=4.66.0",
]

docs = [
    "sphinx>=8.0.0,<9.0.0",
    "sphinx-rtd-theme>=3.0.0,<4.0.0",
    "myst-parser>=4.0.0,<5.0.0",
    "sphinx-autodoc-typehints>=2.0.0,<3.0.0",
    "sphinx-copybutton>=0.5.2,<0.6.0",
]

all = [
    "homodyne[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/your-org/homodyne"
Documentation = "https://homodyne.readthedocs.io"
Repository = "https://github.com/your-org/homodyne.git"
Issues = "https://github.com/your-org/homodyne/issues"

[project.scripts]
homodyne = "homodyne.cli.main:main"
homodyne-config = "homodyne.cli.config_generator:main"
homodyne-config-xla = "homodyne.cli.xla_config:main"
homodyne-post-install = "homodyne.post_install:main"
homodyne-cleanup = "homodyne.uninstall_scripts:main"

[tool.setuptools_scm]
write_to = "homodyne/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
where = ["."]
include = ["homodyne*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
homodyne = [
    "config/templates/*.yaml",
    "config/templates/*.yml",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B110", "B403", "B404", "B603"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "nlsq.*",
    "numpyro.*",
    "blackjax.*",
    "arviz.*",
    "h5py.*",
    "psutil.*",
    "matplotlib.*",
    "datashader.*",
    "xarray.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "docs.*"]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (DEPRECATED in v2.3.0 - CPU-only)",
    "integration: marks tests as integration tests",
    "linux: marks tests as requiring Linux OS",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "mcmc: marks tests as MCMC statistical tests",
    "property: marks tests as property-based tests",
    "requires_jax: marks tests as requiring JAX",
    "requires_gpu: marks tests as requiring GPU hardware (DEPRECATED)",
    "api: marks tests as API compatibility tests",
    "self_consistency: marks tests as CMC self-consistency tests",
    "validation: marks tests as CMC accuracy validation tests",
    "arviz: marks tests as ArviZ integration tests",
    "visualization: marks tests as visualization tests",
]
filterwarnings = [
    "ignore:There are not enough devices to run parallel chains:UserWarning",
    "ignore:JAXopt is no longer maintained:DeprecationWarning",
    "ignore:Covariance of the parameters could not be estimated:scipy.optimize.OptimizeWarning",
    "ignore:invalid escape sequence:SyntaxWarning",
]

[tool.coverage.run]
source = ["homodyne"]
omit = [
    "homodyne/_version.py",
    "homodyne/post_install.py",
    "homodyne/uninstall_scripts.py",
    "homodyne/cli/*",
    "homodyne/viz/*",
    "homodyne/runtime/*",
    "homodyne/data/*",
    "homodyne/device/*",
    "homodyne/io/*",
    "homodyne/core/fitting.py",
    "homodyne/core/models.py",
    "homodyne/core/numpy_gradients.py",
    "homodyne/core/jax_backend.py",
    "homodyne/core/physics.py",
    "homodyne/core/physics_cmc.py",
    "homodyne/core/physics_factors.py",
    "homodyne/core/physics_nlsq.py",
    "homodyne/core/theory.py",
    "homodyne/optimization/mcmc.py",
    "homodyne/optimization/nlsq_wrapper.py",
    "homodyne/optimization/nlsq.py",
    "homodyne/optimization/cmc/*",
    "homodyne/optimization/gradient_diagnostics.py",
    "homodyne/optimization/stratified_residual_jit.py",
    "homodyne/optimization/batch_statistics.py",
    "homodyne/optimization/sequential_angle.py",
    "homodyne/optimization/numerical_validation.py",
    "homodyne/optimization/strategy.py",
    "homodyne/optimization/initialization/*",
    "homodyne/optimization/nlsq/wrapper.py",
    "homodyne/optimization/nlsq/jacobian.py",
    "homodyne/optimization/nlsq/transforms.py",
    "homodyne/optimization/nlsq/strategies/residual_jit.py",
    "homodyne/optimization/mcmc/cmc/*",
    "homodyne/optimization/mcmc/data_prep.py",
    "homodyne/optimization/mcmc/priors.py",
    "homodyne/optimization/mcmc/scaling.py",
    "homodyne/optimization/mcmc/single_angle.py",
    "homodyne/utils/progress.py",
    "homodyne/utils/validation.py",
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.homodyne]
hpc = true
preferred_device = "cpu"

[tool.homodyne.defaults]
analysis_mode = "static_isotropic"
optimization_method = "nlsq"
output_format = "yaml"

[tool.homodyne.performance]
cpu_threads = "auto"
enable_jit = true
cache_compilation = true
