[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.42.0", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homodyne"
dynamic = ["version"]
description = "CPU-optimized JAX-based homodyne scattering analysis for XPCS under nonequilibrium conditions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
    {name = "Hongrui He", email = "hhe@anl.gov"},
]
maintainers = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
]
keywords = [
    "xpcs",
    "scattering",
    "dynamics",
    "jax",
    "optimization",
    "bayesian",
    "physics",
    "materials-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"

# ============================================================================
# CPU-ONLY ARCHITECTURE (v2.3.0+)
# ============================================================================
# Homodyne is CPU-only, optimized for multi-core systems and HPC clusters.
# Works on ALL platforms: Linux, macOS, Windows
#
# Platform support:
#   ✅ Linux: Full support (HPC clusters with 36/128-core nodes)
#   ✅ macOS: Full support (Apple Silicon/Intel)
#   ✅ Windows: Full support
#
# Requirements:
#   - Python 3.12+ (tested with 3.12.x and 3.13.x)
#   - JAX 0.8.2+ (CPU-only)
#   - Multi-core CPU recommended (14+ cores for best performance)
# ============================================================================
dependencies = [
    # Core scientific computing
    "numpy>=2.3",
    "scipy>=1.17",
    # JAX ecosystem (CPU-only)
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "jaxopt>=0.8.3",
    "interpax>=0.3.12",
    "nlsq>=0.6.4",
    "evosax>=0.2.0",
    # Bayesian inference
    "numpyro>=0.19.0",
    "blackjax>=1.3",
    "arviz>=0.23",
    # Data handling
    "h5py>=3.15,<4.0",
    "pyyaml>=6.0.3",
    # System utilities
    "psutil>=7.2",
    "cloudpickle>=3.1",
    # Plotting
    "matplotlib>=3.10",
    # Fast visualization (includes numba as transitive dependency)
    "datashader>=0.18",
    "xarray>=2025.12",
    # Machine learning utilities (for GMM bimodal detection)
    "scikit-learn>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "pytest-xdist>=3.8",
    "ruff>=0.14.11",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "tqdm>=4.67.1",
]

docs = [
    "sphinx>=8.2.3",
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-copybutton>=0.5.2",
]

all = [
    "homodyne[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/your-org/homodyne"
Documentation = "https://homodyne.readthedocs.io"
Repository = "https://github.com/your-org/homodyne.git"
Issues = "https://github.com/your-org/homodyne/issues"

[project.scripts]
homodyne = "homodyne.cli.main:main"
homodyne-config = "homodyne.cli.config_generator:main"
homodyne-config-xla = "homodyne.cli.xla_config:main"
homodyne-post-install = "homodyne.post_install:main"
homodyne-cleanup = "homodyne.uninstall_scripts:main"

[tool.setuptools_scm]
write_to = "homodyne/_version.py"
write_to_template = """
# Auto-generated by setuptools_scm - DO NOT EDIT
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

# Version scheme: "guess-next-dev" automatically bumps the PATCH version (last digit)
# Examples: v2.18.0 → 2.18.0, then commits → 2.18.1.dev1, 2.18.1.dev2, ...
version_scheme = "guess-next-dev"

# Local scheme: "no-local-version" for clean versions in CI/CD (PEP 440 compliant)
# Use "dirty-tag" during development to see "+dirty" for uncommitted changes
local_scheme = "no-local-version"

# Fallback version when git is unavailable (e.g., installing from tarball)
fallback_version = "2.22.0"

# Only match semantic version tags (v1.2.3 or 1.2.3 format)
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"

# Parent directory prefix for version detection from directory name
parentdir_prefix_version = "homodyne-"

[tool.setuptools.packages.find]
where = ["."]
include = ["homodyne*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
homodyne = [
    "config/templates/*.yaml",
    "config/templates/*.yml",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B110", "B403", "B404", "B603"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "nlsq.*",
    "evosax.*",
    "numpyro.*",
    "blackjax.*",
    "arviz.*",
    "h5py.*",
    "psutil.*",
    "matplotlib.*",
    "datashader.*",
    "xarray.*",
    "scipy.*",
    "zstd.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "docs.*"]
follow_imports = "skip"
ignore_errors = true

# Large modules with complex type inference - relax some checks
[[tool.mypy.overrides]]
module = [
    "homodyne.optimization.nlsq.wrapper",
    "homodyne.optimization.nlsq.core",
    "homodyne.optimization.nlsq.progress",
    "homodyne.optimization.nlsq.strategies.residual",
    "homodyne.optimization.nlsq.strategies.sequential",
    "homodyne.optimization.nlsq.strategies.chunking",
    "homodyne.optimization.nlsq.strategies.executors",
    "homodyne.optimization.nlsq.fourier_reparam",
    "homodyne.optimization.nlsq.fit_computation",
    "homodyne.optimization.nlsq.multistart",
    "homodyne.optimization.nlsq.jacobian",
    "homodyne.optimization.nlsq.hierarchical",
    "homodyne.optimization.nlsq.parameter_index_mapper",
    "homodyne.optimization.nlsq.shear_weighting",
    "homodyne.optimization.nlsq.parameter_utils",
    "homodyne.optimization.nlsq.results",
    "homodyne.optimization.nlsq.memory",
    "homodyne.optimization.nlsq.adapter",
    "homodyne.optimization.nlsq.cmaes_wrapper",
    "homodyne.optimization.cmc.sampler",
    "homodyne.optimization.cmc.backends.multiprocessing",
    "homodyne.optimization.cmc.backends.pjit",
    "homodyne.optimization.cmc.backends.base",
    "homodyne.optimization.cmc.core",
    "homodyne.optimization.cmc.io",
    "homodyne.optimization.cmc.plotting",
    "homodyne.optimization.cmc.results",
    "homodyne.optimization.cmc.model",
    "homodyne.optimization.numerical_validation",
    "homodyne.data",
    "homodyne.data.filtering_utils",
    "homodyne.data.validation",
    "homodyne.data.phi_filtering",
    "homodyne.data.xpcs_loader",
    "homodyne.viz.nlsq_plots",
    "homodyne.viz.mcmc_plots",
    "homodyne.viz.datashader_backend",
    "homodyne.viz.experimental_plots",
    "homodyne.config.parameter_manager",
    "homodyne.config.parameter_space",
    "homodyne.cli.xla_config",
]
ignore_errors = true

[tool.pytest.ini_options]
# Pytest configuration for Homodyne test suite (CPU-only)
minversion = "9.0"
addopts = "-ra -q --strict-markers --strict-config --tb=short --maxfail=10 --durations=10"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "linux: marks tests as requiring Linux OS",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "mcmc: marks tests as MCMC statistical tests",
    "requires_jax: marks tests as requiring JAX",
    "api: marks tests as API compatibility tests",
    "self_consistency: marks tests as CMC self-consistency tests",
    "validation: marks tests as CMC accuracy validation tests",
    "arviz: marks tests as ArviZ integration tests",
    "visualization: marks tests as visualization tests",
]
filterwarnings = [
    # JAX warnings
    "ignore::DeprecationWarning:jax.*",
    "ignore::FutureWarning:jax.*",
    "ignore::UserWarning:jax.*",
    # NumPyro warnings
    "ignore::UserWarning:numpyro.*",
    "ignore::DeprecationWarning:numpyro.*",
    # General warnings
    "ignore::PendingDeprecationWarning",
    "ignore::matplotlib.MatplotlibDeprecationWarning",
    "ignore::RuntimeWarning:homodyne.optimization.sequential_angle",
    # Specific warnings
    "ignore:There are not enough devices to run parallel chains:UserWarning",
    "ignore:Covariance of the parameters could not be estimated:scipy.optimize.OptimizeWarning",
    "ignore:scatter inputs have incompatible types.*:FutureWarning",
    "ignore:invalid escape sequence:SyntaxWarning",
    # NumPyro uses deprecated JAX internals (xla_pmap_p) - awaiting upstream fix
    "ignore:jax.interpreters.pxla.xla_pmap_p is deprecated:DeprecationWarning",
]
# Logging
log_cli = false
log_cli_level = "WARNING"
# Performance
junit_family = "xunit2"
cache_dir = ".pytest_cache"

[tool.coverage.run]
source = ["homodyne"]
omit = [
    "homodyne/_version.py",
    "homodyne/post_install.py",
    "homodyne/uninstall_scripts.py",
    "homodyne/cli/*",
    "homodyne/viz/*",
    "homodyne/runtime/*",
    "homodyne/data/*",
    "homodyne/device/*",
    "homodyne/io/*",
    "homodyne/core/fitting.py",
    "homodyne/core/models.py",
    "homodyne/core/numpy_gradients.py",
    "homodyne/core/jax_backend.py",
    "homodyne/core/physics.py",
    "homodyne/core/physics_cmc.py",
    "homodyne/core/physics_factors.py",
    "homodyne/core/physics_nlsq.py",
    "homodyne/core/theory.py",
    "homodyne/optimization/mcmc.py",
    "homodyne/optimization/nlsq_wrapper.py",
    "homodyne/optimization/nlsq.py",
    "homodyne/optimization/cmc/*",
    "homodyne/optimization/gradient_diagnostics.py",
    "homodyne/optimization/stratified_residual_jit.py",
    "homodyne/optimization/batch_statistics.py",
    "homodyne/optimization/sequential_angle.py",
    "homodyne/optimization/numerical_validation.py",
    "homodyne/optimization/strategy.py",
    "homodyne/optimization/initialization/*",
    "homodyne/optimization/nlsq/wrapper.py",
    "homodyne/optimization/nlsq/jacobian.py",
    "homodyne/optimization/nlsq/transforms.py",
    "homodyne/optimization/nlsq/strategies/residual_jit.py",
    "homodyne/optimization/mcmc/cmc/*",
    "homodyne/optimization/mcmc/data_prep.py",
    "homodyne/optimization/mcmc/priors.py",
    "homodyne/optimization/mcmc/scaling.py",
    "homodyne/optimization/mcmc/single_angle.py",
    "homodyne/utils/progress.py",
    "homodyne/utils/validation.py",
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.homodyne]
hpc = true
preferred_device = "cpu"

[tool.homodyne.defaults]
analysis_mode = "static_isotropic"
optimization_method = "nlsq"
output_format = "yaml"

[tool.homodyne.performance]
cpu_threads = "auto"
enable_jit = true
cache_compilation = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]

# [tool.uv.sources]
# Uncomment to use local NLSQ for development:
# nlsq = { path = "../NLSQ", editable = true }
